--- a/style/index.css
+++ b/style/index.css
@@ -4,6 +4,8 @@
     box-sizing: border-box;
 }
 
+/* Style du header */
+
 header {
     height: 50vh;
 }
@@ -48,4 +50,83 @@ header .background-header-overlay {
 nav {
     background-color: #000000;
     display: flex;
+}
+
+/* Style du Main */
+
+body {
+    display: flex;
+    justify-content: center;
+    background-color: #000000;
+}
+
+main {
+    display: flex;
+    background-color: #fcfcfc;
+    height: auto;
+    align-items: center;
+    justify-content: center;
+    width: fit-content;
+    border-radius: 20px;
+}
+
+.thumbnail {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    gap: 40px;
+    align-items: center;
+    padding: 2rem 2rem;
+
+}
+
+.article {
+    background-color: #e2e2e2;
+    border-radius: 20px;
+    width: 22rem;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.article h3 {
+    margin: 0;
+    font-family: "Barlow", sans-serif;
+}
+
+.article img {
+    width: 10rem;
+    padding: 1rem 1rem;
+    border-radius: 25px;
+}
+
+.article-content p {
+    font-family: "Barlow", sans-serif;
+    text-align: justify;
+    padding: 0 1rem 0 1rem;
+}
+
+.read-button {
+    /* background-color: #2a2a2a; */
+    background: linear-gradient(#000000, #807f7f);
+    border-radius: 10px;
+    margin-bottom: 1rem;
+}
+
+.read-button:hover {
+    background: linear-gradient(#807f7f, #000000);
+    color: black;
+}
+
+.read-button a {
+    text-decoration: none;
+    color: #ffffff;
+    font-family: "Barlow", sans-serif;
+    padding: 1rem 1rem 1rem 1rem;
+    line-height: 3;
+
 }
