--- a/style/index.css
+++ b/style/index.css
@@ -142,6 +142,14 @@ footer {
     height: 400px;
 }
 
+footer * {
+    margin: 0;
+}
+
+footer nav {
+    background-color: transparent;
+}
+
 /* Organisation du contenu du footer  */
 
 
