--- a/style/index.css
+++ b/style/index.css
@@ -165,9 +165,11 @@ footer {
     justify-content: center;
     /* background-color: rgb(136, 255, 0); */
     font-family: var(--primary-font);
-    background: linear-gradient(to top, grey, white 80%);
+    background: linear-gradient(290deg, black 13%, white 91%);
+    opacity: 0.9;
     margin-top: auto;
     height: 400px;
+    box-shadow: 0px 0px 20px 0px #2a2a2a;
 }
 
 footer * {
