--- a/style/index.css
+++ b/style/index.css
@@ -25,6 +25,8 @@ header {
     background-attachment: fixed;
     width: 100%;
     display: block;
+    box-shadow: 0px 0px 20px 0px #2a2a2a;
+    margin-bottom: 3rem;
 }
 
 .logo-neg img {
