--- a/style/index.css
+++ b/style/index.css
@@ -26,7 +26,7 @@ header {
     width: 100%;
     display: block;
     box-shadow: 0px 0px 20px 0px #2a2a2a;
-    margin-bottom: 3rem;
+
 }
 
 .logo-neg img {
@@ -101,6 +101,11 @@ main {
     margin-top: 8rem;
 }
 
+.titre {
+    margin: auto;
+    max-width: 1500px;
+}
+
 .thumbnail {
     margin: auto;
     background-color: #fcfcfc;
@@ -115,7 +120,6 @@ main {
 
 .page-title {
     display: flex;
-    position: absolute;
     align-items: center;
     color: #ffffff;
     width: 300px;
@@ -123,7 +127,7 @@ main {
     left: 4rem;
     clip-path: polygon(0 30%, 100% 30%, 85% 100%, 0% 100%);
     background-color: transparent;
-    background-image: linear-gradient(210deg, #FFFFFF 0%, #000000 50%);
+    background-image: linear-gradient(210deg, #FFFFFF 0%, #000000 0%);
     padding-top: 0.9rem;
     padding-left: 3rem;
     font-family: "Barlow Semi Condensed";
@@ -187,8 +191,7 @@ footer {
     /* background-color: rgb(136, 255, 0); */
     font-family: var(--primary-font);
     background: linear-gradient(290deg, black 13%, white 91%);
-    opacity: 0.9;
-    margin-top: auto;
+    margin-top: 2rem;
     height: 400px;
     box-shadow: 0px 0px 20px 0px #2a2a2a;
 }
