--- a/style/events.css
+++ b/style/events.css
@@ -54,6 +54,11 @@ header {
     position: relative;
 }
 
+.menu-header-pages :nth-child(3) {
+  color: rgb(225 199 52);
+
+}
+
 .menu-header-pages a:hover {
     color: rgb(225 199 52);
     transition: color 0.5s;
@@ -151,7 +156,8 @@ main {
   }
   
  *::-webkit-scrollbar {
-    width: 0;
+    width: 0px;
+    height: 0;
   }
   
  *::-webkit-scrollbar-track {
@@ -175,7 +181,7 @@ main {
   
   .carousel {
     position: relative;
-    padding-top: 40%;
+    padding-top: 550px;
     filter: drop-shadow(0 0 10px #0003);
     perspective: 100px;
     width: 600px;
@@ -228,6 +234,7 @@ main {
   }
   
   @media (hover: hover) {
+    
     .carousel__snapper {
       animation-name: tonext, snap;
       animation-timing-function: ease;
@@ -333,6 +340,11 @@ main {
     background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
   }
   
+
+  .article {
+    z-index: 1;
+    position: relative;
+  }
 /* FIN DU CAROUSEL
 FIN DU CAROUSEL */
 
