--- a/style/contact_320px.css
+++ b/style/contact_320px.css
@@ -4,9 +4,9 @@
     box-sizing: border-box;
 }
 
-body {
+/* body {
     margin: 0;
-}
+} */
 
 
 /* Définition de la police générale du site  */
@@ -82,12 +82,29 @@ header {
 
 /* Style du Main */
 
-body {
+/* body {
     background-image: url(/image/vline.png);
     background-repeat: repeat-y;
     background-position: 4.4vw;
 
+} */
+
+body {
+    background-image: url(/image/vline.png);
+    background-repeat: repeat-y;
+    background-position: 8vw;
+    /* width: 100%; */
 }
+
+/* main {
+    height: 100%;
+    display: inline-block;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin-top: 4rem;
+} */
 
 main {
     height: 100%;
@@ -96,15 +113,22 @@ main {
     align-items: center;
     justify-content: center;
     width: 100%;
-    margin-top: 4rem;
+    margin: auto;
 }
 
-.titre {
+/* .titre {
     margin-left: 2vw;
     max-width: 1500px;
+} */
+
+.titre {
+    display: flex;
+    /* margin-left: 2vw; */
+    max-width: 1500px;
+    align-self: flex-start;
 }
 
-.thumbnail {
+/* .thumbnail {
     margin: auto;
     background-color: #fcfcfc;
     width: 80%;
@@ -112,6 +136,19 @@ main {
     display: flex;
     justify-content: center;
     gap: 40px;
+    padding: 1rem;
+    border-radius: 20px;
+} */
+
+.thumbnail {
+    margin: auto;
+
+    /* background-color: #fcfcfc; */
+    width: 100%;
+    height: 40%;
+    display: flex;
+    justify-content: center;
+    /* gap: 40px; */
     padding: 1rem;
     border-radius: 20px;
 }
@@ -161,6 +198,7 @@ main {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    width: 50%;
 }
 
 .form-group input[type="submit"]:hover {
@@ -170,15 +208,34 @@ main {
 
 }
 
-.info-bloc {
+.form-button {
+    display: flex;
+    justify-content: center;
+}
+
+/* .info-bloc {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     width: 80vw;
+} */
+
+.info-bloc {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 90vw;
 }
 
-.info-resa {
+/* .info-resa {
     width: 45%;
+} */
+
+.info-resa {
+    width: 90%;
+
+    /* margin-top: 1rem; */
 }
 
 .location-info {
@@ -189,7 +246,12 @@ main {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
     align-items: center;
-    padding: 20px;
+    padding: 1rem;
+
+}
+
+.location-info h3 {
+    margin: 0 0 1rem 0;
 
 }
 
@@ -222,7 +284,7 @@ main {
     width: 100%;
 }
 
-.maps {
+/* .maps {
     width: 45%;
     height: 100%;
     background: #fff;
@@ -234,12 +296,28 @@ main {
     align-items: center;
     justify-content: space-around;
     padding: 20px;
+} */
+
+.maps {
+    width: 90%;
+    height: 100%;
+    background: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    font-family: var(--primary-font);
+    align-items: center;
+    justify-content: space-around;
+    padding: 20px;
+    margin-top: 1rem;
 }
 
 .maps iframe {
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 100%;
+    height: 100%;
 }
 
 /* Délimitation du footer */
