--- a/style/beers.css
+++ b/style/beers.css
@@ -101,6 +101,15 @@ main {
     margin-top: 8rem;
 }
 
+/* test de responsive pour un grand ecran */
+@media screen and (width >=1700px) {
+    .classic {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin: 0rem 10rem;
+        gap: 5rem
+    }
+}
 
 
 .page-title {
@@ -129,6 +138,9 @@ main section article {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 4rem;
+    margin-top: 4rem;
+    gap: 2rem;
 }
 
 article h2 {
@@ -136,12 +148,18 @@ article h2 {
     display: flex;
     align-items: center;
     justify-content: center;
+    color: rgb(225 199 52);
+    ;
+
 }
 
 .imgbeer {
-    max-width: 268px;
-    height: 268px;
+    max-width: 235px;
+    height: 235px;
     display: block;
+    border-radius: 10rem;
+    box-shadow: -4px 3px 20px 0px #2a2a2a73;
+    background-color: white
 }
 
 article ul {
@@ -154,7 +172,9 @@ article ul {
 
 .beer-description {
     max-width: 296px;
+    margin-top: 0.5rem;
 }
+
 
 /* Style progress bar */
 
@@ -182,6 +202,7 @@ progress {
     border-radius: 6px;
     overflow: hidden;
     margin-top: 8px;
+    box-shadow: 0px 0px 4px 1px #2a2a2a59;
 }
 
 /* **la vincent** progress bar  */
@@ -228,6 +249,71 @@ progress {
     background: rgb(225 199 52);
 }
 
+/* **L'Eleonore ** progress bar  */
+
+.eleonore .progress-container-amertume::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 25%;
+    background: rgb(225 199 52);
+}
+
+.eleonore .progress-container-corps::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 20%;
+    background: rgb(225 199 52);
+}
+
+/* **La St benoit ** progress bar  */
+
+.benoit .progress-container-amertume::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 35%;
+    background: rgb(225 199 52);
+}
+
+.benoit .progress-container-corps::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 70%;
+    background: rgb(225 199 52);
+}
+
+/* **L'ayoub ** progress bar  */
+
+.ayub .progress-container-amertume::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 40%;
+    background: rgb(225 199 52);
+}
+
+.ayub .progress-container-corps::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 35%;
+    background: rgb(225 199 52);
+}
 
 /* Délimitation du footer */
 
