--- a/style/about.css
+++ b/style/about.css
@@ -142,6 +142,7 @@ main {
 
 .article {
     background-color: #e2e2e2;
+    box-shadow: 6px 6px 11px 0px grey;
     border-radius: 20px;
     width: 22rem;
     height: auto;
