--- a/style/about.css
+++ b/style/about.css
@@ -122,6 +122,7 @@ main {
     gap: 40px;
     padding: 1rem;
     border-radius: 20px;
+    flex-wrap: wrap;
 }
 
 .page-title {
@@ -304,4 +305,27 @@ footer .infos {
 .trademark {
     margin-top: 1rem;
     text-align: center;
+}
+
+@media screen and (max-width: 480px) {
+  
+}
+
+@media screen and (max-width:768px) {
+  header {
+    height: 30vh;
+  }
+
+  .carousel {
+    width: 490px;
+  }
+
+  .footer-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    align-items: center;
+    max-height: 100%;
+    justify-items: center;
+  }
 }
