--- a/style/contacts.css
+++ b/style/contacts.css
@@ -355,3 +355,23 @@ footer .infos {
     margin-top: 1rem;
     text-align: center;
 }
+
+@media screen and (max-width: 480px) {
+  
+}
+
+@media screen and (max-width:768px) {
+
+    .carousel {
+    width: 490px;
+  }
+
+  .footer-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    align-items: center;
+    max-height: 100%;
+    justify-items: center;
+  }
+}
