Reduction de la margin top du main en responsive téléphone

--- a/style/beers.css
+++ b/style/beers.css
@@ -521,6 +521,9 @@ footer .infos {
 }
 
 @media screen and (max-width:768px) {
+    main {
+        margin-top: 1rem;
+    }
 
   .carousel {
     width: 490px;
