--- a/style/index.css
+++ b/style/index.css
@@ -303,6 +303,10 @@ footer .infos {
 
 @media screen and (max-width:768px) {
 
+    main {
+        margin-top: 1rem;
+    }
+
   .carousel {
     width: 490px;
   }
