--- a/style/contacts.css
+++ b/style/contacts.css
@@ -34,6 +34,13 @@ header {
 
 }
 
+.menu-burger,
+#toggle {
+    display: none;
+}
+
+
+
 .logo-neg img {
     width: 100%;
 }
@@ -355,6 +362,57 @@ footer .infos {
 }
 
 @media screen and (max-width : 768px) {
+    .menu-header-pages {
+        display: none;
+    }
+
+    .social-link {
+        display: none;
+    }
+
+    .menu-burger {
+        width: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto 2rem auto;
+        font-size: 40px;
+        color: white;
+        cursor: pointer;
+    }
+
+    .menu-header-pages {
+        display: none;
+        flex-direction: column;
+        background: transparent;
+        height: 220px;
+    }
+
+    .menu-header-pages a {
+
+        width: 100%;
+        text-align: center;
+    }
+
+    #toggle:checked+.menu-header-pages {
+        display: flex;
+
+    }
+
+    .logo-neg {
+        width: 350px;
+        position: relative;
+        width: 350px;
+        margin: 0rem auto;
+        padding: 1rem;
+        top: auto;
+        left: auto;
+    }
+
+    header {
+        height: 70vh;
+    }
+
     body {
         background-position: 8vw;
     }
@@ -427,6 +485,10 @@ footer .infos {
         align-items: center;
         max-height: 100%;
         justify-items: center;
+    }
+
+    .footer-container>* {
+        margin-inline: 0rem;
     }
 }
 
