--- a/style/beers.css
+++ b/style/beers.css
@@ -591,7 +591,7 @@ footer .infos {
 
     main section article {
         display: flex;
-        margin-bottom: 2rem;
+        margin-bottom: 3rem;
         margin-top: 2rem;
         gap: 1rem;
         flex-direction: column;
@@ -602,6 +602,20 @@ footer .infos {
         max-width: 150px;
         height: 150px;
         margin: auto;
+    }
+
+    article h2 {
+        width: 100%;
+    }
+
+    article ul {
+        max-width: 100%
+    }
+
+    .beer-description {
+        max-width: none;
+        margin-top: 0.5rem;
+        margin-right: 2rem;
     }
 
 
