--- a/style/index.css
+++ b/style/index.css
@@ -309,13 +309,13 @@ footer .infos {
 
 @media screen and (max-width: 480px) {}
 
-    main {
-        margin-top: 1rem;
-    }
+main {
+    margin-top: 1rem;
+}
 
-  .carousel {
+.carousel {
     width: 490px;
-  }
+}
 
 @media screen and (max-width:768px) {
     .menu-header-pages {
@@ -384,5 +384,11 @@ footer .infos {
 
     .footer-container>* {
         margin-inline: 0rem;
+    }
+}
+
+@media screen and (max-width:1200px) {
+    .menu-header-pages {
+        margin-top: 1.5rem;
     }
 }
