--- a/style/contacts.css
+++ b/style/contacts.css
@@ -492,4 +492,10 @@ footer .infos {
     }
 }
 
+@media screen and (max-width:1200px) {
+    .menu-header-pages {
+        margin-top: 1.5rem;
+    }
+}
+
 @media screen and (max-width: 480px) {}
