--- a/style/beers.css
+++ b/style/beers.css
@@ -580,7 +580,7 @@ footer .infos {
     .footer-container {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
         align-items: center;
         max-height: 100%;
         justify-items: center;
@@ -609,7 +609,24 @@ footer .infos {
         height: 150px;
         margin: auto;
     }
-
+    .footer-logo{
+        grid-column-start: 1;
+        grid-column-end: 3;
+      }
+    
+      .footer-reseaux{
+        grid-column-start: 1;
+        grid-column-end: 3;
+      }
+    
+      .footer-container>* {
+        margin-inline: 0rem;
+      }
+    
+      .footer-section{
+        display: none;
+      }
+    
 
 
 }
