--- a/style/about.css
+++ b/style/about.css
@@ -4,14 +4,18 @@
     box-sizing: border-box;
 }
 
-body {
-    margin: 0;
-}
 
 
 /* Définition de la police générale du site  */
 :root {
     --primary-font: "Barlow Semi Condensed";
+    --secondary-color: rgb(225 199 52);
+}
+
+body {
+    margin: 0;
+    font-style: var(--primary-font);
+    line-height: 1.5;
 }
 
 /* Style du header */
@@ -53,6 +57,11 @@ header {
     color: white;
 }
 
+.menu-header-pages a:hover {
+    color: var(--secondary-color);
+}
+
+
 .menu-header-pages {
     display: flex;
     justify-content: center;
@@ -61,12 +70,12 @@ header {
 }
 
 .menu-header-pages :nth-child(5) {
-    color: rgb(225 199 52);
+    color: var(--secondary-color);
 
 }
 
 .menu-header-pages a:hover {
-    color: rgb(225 199 52);
+    color: var(--secondary-color);
     transition: color 0.5s;
 }
 
@@ -79,7 +88,7 @@ header {
 
 .social-link a {
     text-decoration: none;
-    color: rgb(225 199 52);
+    color: var(--secondary-color);
 
 }
 
@@ -280,7 +289,7 @@ footer .infos {
 }
 
 .footer-section a:hover {
-    color: rgb(225 199 52);
+    color: var(--secondary-color);
     transition: color 0.5s;
 }
 
