--- a/style/contacts.css
+++ b/style/contacts.css
@@ -7,10 +7,13 @@
 /* Définition de la police générale du site  */
 :root {
     --primary-font: "Barlow Semi Condensed";
+    --secondary-color: rgb(225 199 52);
 }
 
 body {
     margin: 0;
+    font-style: var(--primary-font);
+    line-height: 1.5;
     background-image: url(/image/vline.png);
     background-repeat: repeat-y;
     background-position: 4.4vw;
@@ -66,8 +69,13 @@ header {
     position: relative;
 }
 
+.menu-header-pages a:hover {
+    color: var(--secondary-color);
+}
+
+
 .menu-header-pages :nth-child(4) {
-    color: rgb(225 199 52);
+    color: var(--secondary-color);
 }
 
 .social-link {
@@ -79,7 +87,7 @@ header {
 
 .social-link a {
     text-decoration: none;
-    color: rgb(225 199 52);
+    color: var(--secondary-color);
 
 }
 
@@ -171,7 +179,7 @@ main {
 .form-group input[type="submit"]:hover {
     /* background-image: linear-gradient(#FFFFFF 0%, #000000 100%); */
     color: rgb(0, 0, 0);
-    background-color: rgb(225 199 52);
+    background-color: var(--secondary-color);
 
 }
 
@@ -328,7 +336,7 @@ footer .infos {
 }
 
 .footer-section a:hover {
-    color: rgb(225 199 52);
+    color: var(--secondary-color);
     transition: color 0.5s;
 }
 
