--- a/style/index.css
+++ b/style/index.css
@@ -4,14 +4,19 @@
     box-sizing: border-box;
 }
 
-body {
-    margin: 0;
-}
+
 
 
 /* Définition de la police générale du site  */
 :root {
     --primary-font: "Barlow Semi Condensed";
+    --secondary-color: rgb(225 199 52);
+}
+
+body {
+    margin: 0;
+    font-style: var(--primary-font);
+    line-height: 1.5;
 }
 
 /* Style du header */
@@ -61,8 +66,12 @@ header {
 }
 
 .menu-header-pages :nth-child(1) {
-    color: rgb(225 199 52);
+    color: var(--secondary-color);
 
+}
+
+.menu-header-pages a:hover {
+    color: var(--secondary-color);
 }
 
 .social-link {
@@ -74,7 +83,7 @@ header {
 
 .social-link a {
     text-decoration: none;
-    color: rgb(225 199 52);
+    color: var(--secondary-color);
 
 }
 
@@ -272,7 +281,7 @@ footer .infos {
 }
 
 .footer-section a:hover {
-    color: rgb(225 199 52);
+    color: var(--secondary-color);
     transition: color 0.5s;
 }
 
