--- a/style/beers.css
+++ b/style/beers.css
@@ -4,18 +4,15 @@
     box-sizing: border-box;
 }
 
+body {
+    margin: 0;
+}
 
 
 /* Définition de la police générale du site  */
 :root {
     --primary-font: "Barlow Semi Condensed";
     --secondary-color: rgb(225 199 52);
-}
-
-body {
-    margin: 0;
-    font-style: var(--primary-font);
-    line-height: 1.5;
 }
 
 /* Style du header */
@@ -58,7 +55,7 @@ header {
 }
 
 .menu-header-pages a:hover {
-    color: var(--secondary-color);
+    color: var();
 }
 
 
@@ -123,6 +120,16 @@ main section {
     margin: 3rem auto;
 }
 
+@media screen and (width >=1700px) {
+    main section {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin: 3rem 10rem;
+        gap: 5rem
+    }
+}
+
+
 .page-title {
     display: flex;
     align-items: center;
@@ -154,6 +161,9 @@ main section article {
     gap: 2rem;
 }
 
+.menu-header-pages a:hover {
+    color: var(--secondary-color);
+}
 
 article h2 {
     width: 200px;
@@ -231,7 +241,7 @@ progress {
     left: 0;
     height: 100%;
     width: 55%;
-    background: rgb(225 199 52);
+    background: var(--secondary-color);
 }
 
 .vincent .progress-container-corps::before {
