--- a/style/events.css
+++ b/style/events.css
@@ -139,6 +139,7 @@ main {
   padding-left: 3rem;
   font-family: "Barlow Semi Condensed";
   font-size: 1.5rem;
+  margin-bottom: 4rem;
 }
 
 /* CSS DU CAROUSEL */
