--- a/style/about.css
+++ b/style/about.css
@@ -14,7 +14,7 @@
 
 body {
     margin: 0;
-    font-style: var(--primary-font);
+    font-family: var(--primary-font);
     line-height: 1.5;
     background-image: url(/image/vline.png);
     background-repeat: repeat-y;
@@ -143,61 +143,57 @@ main {
     background-image: linear-gradient(210deg, #FFFFFF 0%, #000000 0%);
     padding-top: 0.9rem;
     padding-left: 3rem;
-    font-family: "Barlow Semi Condensed";
     font-size: 1.5rem;
 }
 
 .article {
     background-color: #e2e2e2;
-    box-shadow: 6px 6px 11px 0px grey;
     border-radius: 20px;
     width: 22rem;
-    height: auto;
+    min-height: 490px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    box-shadow: 0px 0px 10px 1px #2a2a2a57;
+    height: 35rem;
     align-items: center;
+    justify-content: space-around;
+    padding: 1rem;
 }
 
 .article h3 {
     margin: 0;
-    font-family: "Barlow", sans-serif;
+}
+
+.article-img {
+    height: 185px;
+    margin-bottom: 1rem;
+    border-radius: 16px;
 }
 
 .article img {
-    width: 20rem;
+    width: 100%;
+    height: 100%;
     padding: 1rem 1rem;
     border-radius: 100%;
 }
 
-.article-content p {
-    font-family: var(--primary-font);
+.article-title {
+    height: 29px;
     font-size: 1.1rem;
-    line-height: 1.5;
-    font-weight: 400;
-    text-align: justify;
+}
+
+.article-content {
+    height: 200px;
+}
+
+.article-content p {
+    text-align: center;
     padding: 0 1rem 0 1rem;
+    margin-bottom: 2rem;
+    padding: 0 1rem;
+    font-size: 1.1rem;
 }
 
-.read-button {
-    background: linear-gradient(#000000, #807f7f);
-    border-radius: 10px;
-    margin-bottom: 1rem;
-}
-
-.read-button:hover {
-    background: linear-gradient(#807f7f, #000000);
-    color: black;
-}
-
-.read-button a {
-    text-decoration: none;
-    color: #ffffff;
-    font-family: "Barlow", sans-serif;
-    padding: 1rem 1rem 1rem 1rem;
-    line-height: 3;
-
-}
 
 /* Délimitation du footer */
 
