--- a/style/events.css
+++ b/style/events.css
@@ -469,7 +469,7 @@ footer {
   /* background-color: rgb(136, 255, 0); */
   font-family: var(--primary-font);
   background: linear-gradient(290deg, black 13%, white 91%);
-  opacity: 0.9;
+  /* opacity: 0.9; */
   margin-top: auto;
   height: 400px;
   box-shadow: 0px 0px 20px 0px #2a2a2a;
