--- a/style/events.css
+++ b/style/events.css
@@ -495,12 +495,12 @@ footer nav {
 }
 
 footer .bi-facebook {
-  color: #0866ff;
+  color: var(--secondary-color);
 }
 
 footer .bi-instagram {
-  color: rgb(238, 228, 228);
-  background: linear-gradient(to top, yellow, purple);
+  color: var(--secondary-color);
+  /* background: linear-gradient(to top, yellow, purple); */
   border-radius: 7px;
   padding: 2px;
 }
@@ -533,6 +533,7 @@ footer .infos {
 .footer-section {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .footer-section a {
@@ -550,6 +551,14 @@ footer .infos {
 .footer-horaires {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+.footer-horaires p {
+color: black;
+font-weight: bold;
+/* -webkit-text-stroke-width: 0.2px;
+-webkit-text-stroke-color: black; */
 }
 
 /* Boite des réseaux */
