--- a/style/index.css
+++ b/style/index.css
@@ -268,15 +268,15 @@ footer nav {
 }
 
 footer .bi-facebook {
-    color: #0866ff;
-}
-
-footer .bi-instagram {
-    color: rgb(238, 228, 228);
-    background: linear-gradient(to top, yellow, purple);
+    color: var(--secondary-color);
+  }
+  
+  footer .bi-instagram {
+    color: var(--secondary-color);
+    /* background: linear-gradient(to top, yellow, purple); */
     border-radius: 7px;
     padding: 2px;
-}
+  }
 
 .footer-container {
     display: flex;
@@ -306,7 +306,8 @@ footer .infos {
 .footer-section {
     display: flex;
     flex-direction: column;
-}
+    align-items: center;
+  }
 
 .footer-section a {
     text-decoration: none;
@@ -323,7 +324,15 @@ footer .infos {
 .footer-horaires {
     display: flex;
     flex-direction: column;
-}
+    align-items: center;
+  }
+  
+  .footer-horaires p {
+  color: black;
+  font-weight: bold;
+  /* -webkit-text-stroke-width: 0.2px;
+  -webkit-text-stroke-color: black; */
+  }
 
 /* Boite des réseaux */
 .footer-reseaux {
