--- a/style/contacts.css
+++ b/style/contacts.css
@@ -165,6 +165,7 @@ main {
     border: 1px solid #ddd;
     border-radius: 4px;
     box-sizing: border-box;
+    resize: none;
 }
 
 .form-group input[type="submit"] {
@@ -183,6 +184,45 @@ main {
     background-color: var(--secondary-color);
 
 }
+
+
+
+.form-group-button {
+    /* background-image: linear-gradient(#000000 100%, #FFFFFF 0%); */
+    display: flex;
+    justify-content: center;
+}
+
+.form-group .form-button {
+    /* background-image: linear-gradient(#000000 100%, #FFFFFF 0%); */
+    display: flex;
+    justify-content: center;
+}
+
+.return-button {
+    /* background-image: linear-gradient(#000000 100%, #FFFFFF 0%); */
+    background-color: #000000;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+    width: fit-content;
+}
+
+.return-button a {
+    text-decoration: none;
+    color: white;
+}
+
+.return-button:hover {
+    /* background-image: linear-gradient(#FFFFFF 0%, #000000 100%); */
+    color: rgb(0, 0, 0);
+    background-color: var(--secondary-color);
+
+}
+
 
 .info-bloc {
     display: flex;
