--- a/style/events.css
+++ b/style/events.css
@@ -225,26 +225,31 @@ li {
 
 .carousel {
   position: relative;
-  padding-top: 550px;
+  /* padding-top: 550px; */
   filter: drop-shadow(0 0 10px #0003);
-  perspective: 100px;
-  width: 600px;
+  /* perspective: 100px; */
+  width: 510px;
   margin: auto;
   border-radius: 46px;
-  border: #fcfcfc 20px solid;
+  /* border: #fcfcfc 20px solid; */
+  display: flex;
+  justify-content: center;
 }
 
 .carousel__viewport {
-  position: absolute;
+  /* position: absolute; */
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   display: flex;
-  overflow-x: scroll;
+  /* overflow-x: scroll; */
   counter-reset: item;
-  scroll-behavior: smooth;
-  scroll-snap-type: x mandatory;
+  /* scroll-behavior: smooth; */
+  /* scroll-snap-type: x mandatory; */
+  width: 130%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 .carousel__slide {
@@ -253,6 +258,7 @@ li {
   width: 100%;
   background-color: #fcfcfc;
   counter-increment: item;
+  padding: 1rem;
 }
 
 /* .carousel__slide:nth-child(even) {
@@ -308,6 +314,7 @@ li {
   bottom: 0;
   left: 0;
   text-align: center;
+  display: none;
 }
 
 .carousel__navigation-list,
@@ -350,6 +357,7 @@ li {
   font-size: 0;
   outline: 0;
   z-index: 2;
+  display: none;
 }
 
 .carousel::before,
@@ -399,15 +407,23 @@ FIN DU CAROUSEL */
   background-color: #e2e2e2;
   border-radius: 20px;
   width: 22rem;
-  height: auto;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   margin-inline: auto;
-  margin-top: 5%;
+  /* margin-top: 5%; */
   line-height: 1.7rem;
   font-family: var(--primary-font);
+  margin-bottom: 1rem;
+  transform: scale(1);
+  transition-duration: 0.2s;
+}
+
+.article:hover {
+  transform: scale(1.3);
+  transition-duration: 0.5s;
 }
 
 .article h3 {
@@ -643,29 +659,6 @@ font-weight: bold;
 
   }
 
-  .carousel__viewport {
-    width: 100%;
-  }
-
-  .carousel {
-    width: 88%;
-    padding-top: 480px;
-  }
-
-  .article {
-    width: 70%;
-  }
-
-  .article-img {
-    width: 65%;
-  }
-
-  .article img {
-    width: 100%;
-    padding: 1rem 1rem;
-    border-radius: 25px;
-  }
-
   .footer-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -693,6 +686,169 @@ font-weight: bold;
     display: none;
   }
 
+  .carousel {
+    position: relative;
+    padding-top: 550px;
+    filter: drop-shadow(0 0 10px #0003);
+    perspective: 100px;
+    width: 600px;
+    margin: auto;
+    border-radius: 46px;
+    border: #fcfcfc 20px solid;
+  }
+  
+  .carousel__viewport {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    overflow-x: scroll;
+    counter-reset: item;
+    scroll-behavior: smooth;
+    scroll-snap-type: x mandatory;
+  }
+  
+  .carousel__slide {
+    position: relative;
+    flex: 0 0 100%;
+    width: 100%;
+    background-color: #fcfcfc;
+    counter-increment: item;
+  }
+  
+  /* .carousel__slide:nth-child(even) {
+      background-color: #99f;
+    } */
+  
+  .carousel__slide:before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate3d(-50%, -40%, 70px);
+    color: #fff;
+    font-size: 2em;
+  }
+  
+  .carousel__snapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    scroll-snap-align: center;
+  }
+
+  .carousel__navigation {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+    display: block;
+  }
+  
+  .carousel__navigation-list,
+  .carousel__navigation-item {
+    display: inline-block;
+  }
+  
+  .carousel__navigation-button {
+    display: inline-block;
+    width: 1.5rem;
+    height: 1.5rem;
+    background-color: #333;
+    background-clip: content-box;
+    border: 0.25rem solid transparent;
+    border-radius: 50%;
+    font-size: 0;
+    transition: transform 0.1s;
+  }
+  
+  .carousel__navigation-button:active {
+    background-color: var(--secondary-color);
+  }
+  
+  .carousel__navigation-button:hover {
+    background-color: var(--secondary-color);
+  }
+  
+  
+  .carousel::before,
+  .carousel::after,
+  .carousel__prev,
+  .carousel__next {
+    position: absolute;
+    top: 0;
+    margin-top: 45%;
+    width: 4rem;
+    height: 4rem;
+    transform: translateY(-50%);
+    border-radius: 50%;
+    font-size: 0;
+    outline: 0;
+    z-index: 2;
+    display: block;
+  }
+  
+  .carousel::before,
+  .carousel__prev {
+    left: -1rem;
+  }
+  
+  .carousel::after,
+  .carousel__next {
+    right: -1rem;
+  }
+  
+  .carousel::before,
+  .carousel::after {
+    content: '';
+    z-index: 2;
+    background-color: #333;
+    background-size: 1.5rem 1.5rem;
+    background-repeat: no-repeat;
+    background-position: center center;
+    color: #fff;
+    font-size: 2.5rem;
+    line-height: 4rem;
+    text-align: center;
+    pointer-events: none;
+  }
+  
+  .carousel::before {
+    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='0,50 80,100 80,0' fill='%23fff'/%3E%3C/svg%3E");
+  }
+  
+  .carousel::after {
+    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
+  }
+
+  
+  .carousel__viewport {
+    width: 100%;
+  }
+
+  .carousel {
+    width: 88%;
+    padding-top: 480px;
+  }
+
+  .article {
+    width: 70%;
+    height: 95%;
+  }
+
+  .article-img {
+    width: 65%;
+  }
+
+  .article img {
+    width: 100%;
+    padding: 1rem 1rem;
+    border-radius: 25px;
+  }
 }
 
 @media screen and (max-width:1200px) {
