--- a/style/about.css
+++ b/style/about.css
@@ -183,7 +183,7 @@ main {
 }
 
 .article-content {
-    height: 200px;
+    height: 260px;
 }
 
 .article-content p {
@@ -233,10 +233,10 @@ footer .bi-facebook {
 }
 
 footer .bi-instagram {
-color: var(--secondary-color);
-/* background: linear-gradient(to top, yellow, purple); */
-border-radius: 7px;
-padding: 2px;
+    color: var(--secondary-color);
+    /* background: linear-gradient(to top, yellow, purple); */
+    border-radius: 7px;
+    padding: 2px;
 }
 
 .footer-container {
@@ -289,9 +289,9 @@ footer .infos {
 }
 
 .footer-horaires p {
-color: black;
-font-weight: bold;
-/* -webkit-text-stroke-width: 0.2px;
+    color: black;
+    font-weight: bold;
+    /* -webkit-text-stroke-width: 0.2px;
 -webkit-text-stroke-color: black; */
 }
 
@@ -373,6 +373,11 @@ font-weight: bold;
         height: 70vh;
     }
 
+    footer {
+        height: 450px;
+        padding: 1rem;
+    }
+
     .footer-container {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -403,6 +408,12 @@ font-weight: bold;
     .footer-section {
         display: none;
     }
+
+    .footer-horaires p,
+    .footer-horaires h3 {
+        color: var(--secondary-color);
+    }
+
 }
 
 @media screen and (max-width:1200px) {
