--- a/style/index.css
+++ b/style/index.css
@@ -272,10 +272,10 @@ footer .bi-facebook {
 }
 
 footer .bi-instagram {
-color: var(--secondary-color);
-/* background: linear-gradient(to top, yellow, purple); */
-border-radius: 7px;
-padding: 2px;
+    color: var(--secondary-color);
+    /* background: linear-gradient(to top, yellow, purple); */
+    border-radius: 7px;
+    padding: 2px;
 }
 
 .footer-container {
@@ -328,9 +328,9 @@ footer .infos {
 }
 
 .footer-horaires p {
-color: black;
-font-weight: bold;
-/* -webkit-text-stroke-width: 0.2px;
+    color: black;
+    font-weight: bold;
+    /* -webkit-text-stroke-width: 0.2px;
 -webkit-text-stroke-color: black; */
 }
 
@@ -418,8 +418,10 @@ font-weight: bold;
         height: 70vh;
     }
 
-    .carousel {
-        width: 490px;
+
+    footer {
+        height: 450px;
+        padding: 1rem;
     }
 
     .footer-container {
@@ -451,6 +453,11 @@ font-weight: bold;
 
     .footer-section {
         display: none;
+    }
+
+    .footer-horaires p,
+    .footer-horaires h3 {
+        color: var(--secondary-color);
     }
 
 }
