Détailing des cards évènements

--- a/style/about.css
+++ b/style/about.css
@@ -289,7 +289,7 @@ footer .infos {
 }
 
 .footer-horaires p {
-color: black;
+color: var(--secondary-color);
 font-weight: bold;
 /* -webkit-text-stroke-width: 0.2px;
 -webkit-text-stroke-color: black; */
