--- a/style/contacts.css
+++ b/style/contacts.css
@@ -12,7 +12,7 @@
 
 body {
     margin: 0;
-    font-style: var(--primary-font);
+    font-family: var(--primary-font);
     line-height: 1.5;
     background-image: url(/image/vline.png);
     background-repeat: repeat-y;
